class_extraction.txt
  File "<string>", line 21
    print(f'\n{\
              ^
SyntaxError: '{' was never closed
